syntax = "proto3";

package grpc_server;

option go_package = "./";

message Empty{}

message OnlinePilot {
  string callsign = 1;
  string username = 2;
  string email = 3;
  int32 cid = 4;
  string realName = 5;
  float lat = 6;
  float lon = 7;
  int32 transponder = 8;
  int32 altitude = 9;
  int32 groundSpeed = 10;
  int64 onlineTime = 11;
}

message OnlineAtc {
  string callsign = 1;
  string username = 2;
  string email = 3;
  int32 cid = 4;
  string realName = 5;
  float lat = 6;
  float lon = 7;
  int32 rating = 8;
  string facility = 9;
  int32 frequency = 10;
  repeated string atcInfo = 11;
  int64 onlineTime = 12;
}

message OnlineClient {
  int32 totalOnline = 1;
  int32 atcOnline = 2;
  int32 pilotOnline = 3;
  repeated OnlineAtc onlineAtc = 4;
  repeated OnlinePilot onlinePilot = 5;
}

service ServerStatus {
  rpc GetOnlineClient(Empty) returns (OnlineClient);
}